--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
-      
-<h:head />
-<h:body>
-	<h:form>
-		<p:commandButton action="#{teste.teste}" value="Teste" />
-	</h:form>
-</h:body>
-</html>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	template="/WEB-INF/xhtml/templates/baseLayout.xhtml">
+
+	<ui:define name="content">
+		<p:layoutUnit position="center">
+		</p:layoutUnit>
+	</ui:define>
+
+</ui:composition>
